MaisSfdx/force-app/main/default/objects/Piloto__c/Piloto__c.object-meta.xml
<CustomObject>
    <description>Pilotos de Fórmula 1</description>
    <label>Piloto</label>
    <nameField>
        <label>Nome de Piloto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pilotos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>