MaisSfdx/force-app/main/default/objects/Piloto__c/fields/AnoEstreia__c.field-meta.xml
<CustomField>
    <fullName>AnoEstreia__c</fullName>
    <description>Ano de estréia do piloto.</description>
    <inlineHelpText>Ano de estréia do piloto.</inlineHelpText>
    <label>Ano de Estréia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>