MaisSfdx/force-app/main/default/objects/Piloto__c/fields/Ativo__c.field-meta.xml
<CustomField>
    <fullName>Ativo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>O piloto está no campeonato.</description>
    <inlineHelpText>O piloto está no campeonato.</inlineHelpText>
    <label>Ativo</label>
    <type>Checkbox</type>
</CustomField>