MaisSfdx/force-app/main/default/objects/Piloto__c/fields/DataNascimento__c.field-meta.xml
<CustomField>
    <fullName>DataNascimento__c</fullName>
    <description>Data de nascimento do piloto</description>
    <inlineHelpText>Data de Nascimento do piloto</inlineHelpText>
    <label>Data de Nascimento</label>
    <type>Date</type>
</CustomField>