MaisSfdx/force-app/main/default/objects/Piloto__c/fields/Equipe__c.field-meta.xml
<CustomField>
    <fullName>Equipe__c</fullName>
    <description>Equipe a qual o piloto pertence.</description>
    <inlineHelpText>Equipe a qual o piloto pertence.</inlineHelpText>
    <label>Equipe</label>
    <referenceTo>Equipe__c</referenceTo>
    <relationshipLabel>Pilotos</relationshipLabel>
    <relationshipName>Pilotos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>