MaisSfdx/force-app/main/default/objects/Piloto__c/fields/Idade__c.field-meta.xml
<CustomField>
    <fullName>Idade__c</fullName>
    <description>Idade calculada pela data de nascimento e a data atual.</description>
    <formula>(TODAY() - DataNascimento__c) / 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Idade do piloto.</inlineHelpText>
    <label>Idade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>