MaisSfdx/force-app/main/default/objects/Piloto__c/fields/NumeroVitorias__c.field-meta.xml
<CustomField>
    <fullName>NumeroVitorias__c</fullName>
    <label>Número de Vitórias</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>