MaisSfdx/force-app/main/default/objects/Piloto__c/fields/Observacao__c.field-meta.xml
<CustomField>
    <fullName>Observacao__c</fullName>
    <description>Observações da carreira do piloto.</description>
    <inlineHelpText>Observações da carreira do piloto.</inlineHelpText>
    <label>Observação</label>
    <type>TextArea</type>
</CustomField>