MaisSfdx/force-app/main/default/objects/Piloto__c/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <description>País de Origem do piloto.</description>
    <inlineHelpText>País de Origem do piloto.</inlineHelpText>
    <label>País</label>
    <length>255</length>
    <type>Text</type>
</CustomField>