MaisSfdx/force-app/main/default/objects/Piloto__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Pais__c</columns>
    <columns>AnoEstreia__c</columns>
    <columns>DataNascimento__c</columns>
    <columns>Idade__c</columns>
    <columns>Equipe__c</columns>
    <columns>NumeroVitorias__c</columns>
    <columns>Ativo__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>